fix: add overflow hidden to h1 on budgets page

--- a/tenants/base/app/assets/stylesheets/base.scss
+++ b/tenants/base/app/assets/stylesheets/base.scss
@@ -1290,6 +1290,7 @@ footer {
   h1 {
     font-size: rem-calc(48);
     padding: $line-height * 2 0 $line-height;
+    overflow: hidden;
 
     @include breakpoint(medium) {
       font-size: rem-calc(60);
